<resources>
    <string name="app_name">MExpenseDemo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="trip_name_hint">Enter trip name</string>
    <string name="destination">Enter destination</string>
    <string name="description">Enter description</string>
    <string name="tripdate_hint">Enter the date of your trip</string>
    <string name="newtrip_header">Add your new trip!</string>
    <string name="desc_hint">Enter optional description</string>
    <string name="isRisk_hint">Requires risk assessment ?</string>
    <string name="save_text">Save</string>
    <string name="isRisk">Risk assessment?</string>
    <string name="todo">TODO</string>
    <string name="title_activity_welcome_page">WelcomePageActivity</string>
    <string name="expensename_hint">Enter expense name</string>
    <string name="expense_name_hint">Enter Expense Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tripname_val">Trip Name is required</string>
    <string name="destination_val">Destination is required</string>
</resources>