<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MutateTripFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Trip name"
            android:textColor="#593da4"
            android:textSize="19sp"
            android:textStyle="bold"
            android:fontFamily="@font/geomanist"
            android:layout_marginLeft="20dp"/>
        <EditText
            android:id="@+id/edit_tripname"
            style="@style/formStyle"
            android:layout_height="48dp"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="15dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/trip_name_hint"
            android:textColorHint="#AFAFAF"
            android:background="@drawable/edittextshape"
            android:importantForAutofill="no" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Destination"
            android:textColor="#593da4"
            android:textSize="19sp"
            android:textStyle="bold"
            android:fontFamily="@font/geomanist"
            android:layout_marginLeft="20dp"
            ></TextView>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edit_tripdestination"
                style="@style/formStyle"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="15dp"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="@string/destination"
                android:textColorHint="#AFAFAF"
                android:background="@drawable/edittextshape"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp" />
            <ImageView
                android:id="@+id/btn_edittrip_map"
                android:layout_width="30dp"
                android:layout_height="33dp"
                android:background="@drawable/icon_location"
                android:layout_gravity="right"
                android:layout_marginRight="20dp"
                android:layout_marginTop="13dp"/>
        </FrameLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Description"
            android:textColor="#593da4"
            android:textSize="19sp"
            android:fontFamily="@font/geomanist"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            ></TextView>
        <EditText
            android:id="@+id/edit_tripdescription"
            style="@style/formStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="15dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="@string/desc_hint"
            android:textColorHint="#AFAFAF"
            android:background="@drawable/edittextshape"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <LinearLayout
                android:id="@+id/start_date_button"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/edittextshape"
                android:orientation="horizontal"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_calendar_today_24"
                    android:layout_marginStart="10dp"/>
                <TextView
                    android:id="@+id/txt_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Start Date"
                    android:textColor='#29003D'
                    android:textSize="16sp"
                    android:layout_marginStart="8dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/geomanist"
                    />
            </LinearLayout>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_next"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="15dp"
                />
            <LinearLayout
                android:id="@+id/end_date_button"
                android:layout_width="130dp"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/edittextshape"
                android:orientation="horizontal"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_calendar_today_24"
                    android:layout_marginStart="15dp"/>
                <TextView
                    android:id="@+id/txt_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="End Date"
                    android:textColor='#29003D'
                    android:textSize="16sp"
                    android:layout_marginStart="8dp"
                    android:textStyle="bold"
                    android:fontFamily="@font/geomanist"
                    />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="This trip has risk assessment"
                android:textColor='#29003D'
                android:textSize="16sp"
                android:fontFamily="@font/geomanist"
                android:layout_marginStart="8dp"
                android:textStyle="bold"
                ></TextView>
            <Switch
                android:id="@+id/edit_tripisRisk"
                android:layout_width="70dp"
                android:layout_height="70dp"></Switch>
        </LinearLayout>
    </LinearLayout>
</ScrollView>